--- a/indentsAndSpans.html
+++ b/indentsAndSpans.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="style.css">
 <style>
 
-
 </style>
 </head>
 <body>
@@ -17,10 +16,10 @@ Add css rules to make the text below match the pictured academic essay format. T
 <ol>
 	<li>Set a vertical margin of 0 and an appropriate horizontal margin for the essay and worksCited sections (try to eyeball a good estimate and then adjust until you get it right</li>
 	<li>Strip the margins from paragraphs (p tags) inside of the essay section and use a text-indent rule to set an appropriate first line indent. You can set text indent in pixels, em, or percent. Which do you think would be best to use?</li>
+	<li>Set the line-height rule for p tags inside of the essay section to achieve the "double spaced" appearance shown. Remember that the em unit is the size of a capital letter in the current font. Given that a double spaced paragraph has enough room for another line of text (including capital letters) between each line, you should be able to figure out the right em value for line-height pretty easily!</li>
 	<li>Set a negative text-indent for paragraps in the worksCited section to achieve the hanging-indent. Then adjust the left margin for these paragraps to move them back into alignment with the other text (note: if you think about how the negative indent moved the text on the page, you should be able to easily compute the correct left margin to move things back).</li>
 	<li>Add a color rule for the class note to change the color of the first note, note [2]. Choose something sensible. Then apply span tags with the class note to the other notes in the text. Using span tags allows you to apply any aribtrary styling you want to inline text.</li>
 </ol>
-Once you have matched the pictured format, improve it by adding a line-spacing rule to the essay div to make the paragraph text look less bunched up. Try to replicate the "double-spaced" appearance of an academic paper.
 </div>
 <div id="exercise1" class="exercise">
 <section id="essay">
