last line for format exercise

--- a/indentsAndSpans.html
+++ b/indentsAndSpans.html
@@ -20,6 +20,7 @@ Add css rules to make the text below match the pictured academic essay format. T
 	<li>Set a negative text-indent for paragraps in the worksCited section to achieve the hanging-indent. Then adjust the left margin for these paragraps to move them back into alignment with the other text (note: if you think about how the negative indent moved the text on the page, you should be able to easily compute the correct left margin to move things back).</li>
 	<li>Add a color rule for the class note to change the color of the first note, note [2]. Choose something sensible. Then apply span tags with the class note to the other notes in the text. Using span tags allows you to apply any aribtrary styling you want to inline text.</li>
 </ol>
+Once you have replicated the pictured design, try experimenting with some spans and other rules and see what sorts of other formats you can achieve.
 </div>
 <div id="exercise1" class="exercise">
 <section id="essay">
